# libmetriks

./: .codecov.yml  .sonar-project.properties  .travis.yml  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md
src/: CMakeLists.txt  metrics.c  metrics.h
src/trie/: info.txt
tests/: CMakeLists.txt  simple.c
